# square-payments-extension

./: .gitignore  ENVIRONMENT_SETUP.md  LICENSE  README.md  config.yaml  install_uv.sh  pyproject.toml  requirements.txt  setup.py
.hermit/: environment.sh  hermit.hcl
src/square_payments_extension/: __init__.py
